See if I can update the compilers

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-language: cpp
-os: linux
+- os: linux
+  addons:
+    apt:
+      sources:
+        - ubuntu-toolchain-r-test
+      packages:
+        - g++-10
+        - clang-10
+language: cpp        
 dist: bionic
 compiler:
   - gcc
