--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-- os: linux
-  language: cpp        
-  dist: bionic
-  compiler: gcc
-        
+language: cpp
+os: linux
+dist: bionic
+compiler: gcc
+
 before_install:
   - sudo apt-get -y install g++-10
   - sudo apt-get -y install clang-11
