--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-10
-            - clang-10
+            - clang-11
       language: cpp
-      dist: bionic
+      dist: focal
       compiler:
         - gcc
         - clang
