--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 matrix:
   include:
     - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-11
-            - clang-12
       language: cpp
       dist: focal
-      compiler:
-        - gcc
-        - clang
+      
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -q update
+  - sudo apt-get -y install g++-11
+  - sudo apt-get -y install clang-12
 
 script:
   - bash ./.travis.sh
