--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 matrix:
   include:
     - os: linux
-      dist: focal
-      
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get -q update
-  - sudo apt-get -y install g++-11
-  - sudo apt-get -y install clang-11
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-10
+            - clang-10
+      language: cpp
+      dist: bionic
+      compiler:
+        - gcc
+        - clang
 
 script:
   - bash ./.travis.sh
