--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
             - g++-10
             - clang-10
       language: cpp
-      dist: bionic
+      dist: focal
       compiler:
         - gcc
         - clang
